src-tauri/tests/snapshots/switchmap__whoop_live.snap
---
source: tests/switchmap.rs
expression: "switchmap::render_text(&m)"
---
Switch map: WHOOP ONE
Read: whoop model00.yml, fc.diff_all.txt
Sticks: Roll CH1 100%, Pitch CH2 100%, Throttle CH3 100%, Yaw CH4 100%

SA (2POS)
  up        CH5 988                FC: -                                  Radio: Plays "disarm"
* down      CH5 2012               FC: ARM                                Radio: L1 on; Timer 1 (TOT) runs; Plays "armed"

SB (3POS)
  up        CH6 988                FC: ANGLE                              Radio: -
* mid       CH6 1500               FC: HORIZON                            Radio: -
  down      CH6 2012               FC: -                                  Radio: -

SC (3POS)
  up        CH7 988                FC: Rate profile 1                     Radio: -
  mid       CH7 1500               FC: Rate profile 2                     Radio: -
* down      CH7 2012               FC: Rate profile 3                     Radio: -

SD (2POS)
* up        CH8 988                FC: -                                  Radio: -
  down      CH8 2012               FC: BEEPER; FLIP OVER AFTER CRASH      Radio: -

SE (TOGGLE)
  released  -                      FC: -                                  Radio: -
  pressed   -                      FC: -                                  Radio: Plays "lapclr"

Throttle trim down
  released  -                      FC: -                                  Radio: -
  pressed   -                      FC: -                                  Radio: Reads Timer 1

Throttle stick
  low       -                      FC: -                                  Radio: L2 on
  centre    -                      FC: -                                  Radio: -
  high      -                      FC: -                                  Radio: -

Modes
  ARM                    AUX1 (CH5) 1700-2100
  ANGLE                  AUX2 (CH6) 900-1300
  HORIZON                AUX2 (CH6) 1300-1700
  BEEPER                 AUX4 (CH8) 1700-2100
  FLIP OVER AFTER CRASH  AUX4 (CH8) 1700-2100
  BLACKBOX               AUX6 (CH10) 1700-2100

Adjustments
  Rate profile           on while AUX3 900-2100, selected by AUX3

Live (fc): CH1 1500, CH2 1500, CH3 988, CH4 1500, CH5 2012, CH6 1500, CH7 2012, CH8 988
  modes: ARM, HORIZON
  adjustments: Rate profile 3

Not mapped (telemetry, timers, sticky state)
  L4 (telemetry): RxBt > 10; used by Reads RxBt

Conflicts
  - BLACKBOX is on AUX6 (CH10), which no control moves: never on.
  - BEEPER and FLIP OVER AFTER CRASH share one range: AUX4 1700-2100.
  - Sound "lapclr" is not on the card: a special function plays it.
